Bug 39378 - Words are cutoff in the Modifiers section for Online Orders on Firefox and Internet Explorer

--- a/skins/weborder/css/rewards.css
+++ b/skins/weborder/css/rewards.css
@@ -78,7 +78,6 @@
 .rewards-total__item {
     display: inline-block;
     width: 32%;
-    word-break: break-word;
     vertical-align: top;
 }
 
